added rune vm doc & updated rune tutorial

--- a/docs/tutorial.mdx
+++ b/docs/tutorial.mdx
@@ -51,7 +51,7 @@ $ cargo install --git https://github.com/hotg-ai/rune rune
 ```
 
 :::note
-It might take a long time to download and compile the rune command-line tool.
+Initial compilation for the rune command-line tool may take some time.
 :::
 
 ### Nightly Release
@@ -98,7 +98,9 @@ We will begin by creating a `Runefile` in the folder under `rune/docs/tutorial_g
 2. `cd tutorial_gesture`
 3. `touch Runefile`
 
-*Note: The Runefiles for other things like microspeech and person detection can be found in the `examples` directory*
+:::note
+The Runefiles for other things like microspeech and person detection can be found in the `examples` directory*
+:::
 
 ### Runefile
 
