added rune_vm example & fixed some typos

--- a/docs/tutorial.mdx
+++ b/docs/tutorial.mdx
@@ -99,7 +99,7 @@ We will begin by creating a `Runefile` in the folder under `rune/docs/tutorial_g
 3. `touch Runefile`
 
 :::note
-The Runefiles for other things like microspeech and person detection can be found in the `examples` directory*
+The Runefiles for other things like microspeech and person detection can be found in the `examples` directory
 :::
 
 ### Runefile
