--- a/docs/tutorial.mdx
+++ b/docs/tutorial.mdx
@@ -191,10 +191,11 @@ For convenience `docs/tutorial_gesture` already contains the tflite model we wil
 
 ### Build
 
-Great! Now that everything is setup, we can generate the rune :)
+Great! Now that everything is setup, we can generate the rune. Enter the next command from the root of the `rune` repository.
 
-1. Open terminal and go to the `rune` directory. Run the next command.
-2. `cargo run --bin rune -- build docs/tutorial_gesture/Runefile`
+```console
+$ rune build docs/tutorial_gesture/Runefile
+```
 
 Your rune `tutorial_gesture.rune` will be generated in the same directory as the `Runefile`.
 
@@ -204,7 +205,9 @@ Congrats! You now have a rune which can be deployed on your devices.
 
 You can run the Rune with test data which has been provided in the `docs/tutorial_gesture` directory using the following command.
 
->```cargo run --bin rune -- run docs/tutorial_gesture/tutorial_gesture.rune --capability accelerometer:docs/tutorial_gesture/example_ring.csv```
+```console
+$ rune run docs/tutorial_gesture/tutorial_gesture.rune --capability accelerometer:docs/tutorial_gesture/example_ring.csv
+```
 
 `example_ring.csv` contains data similar to what an accelerometer would collect if a ring gesture was made.
 
