Adding contribution to sidebar

--- a/docs/contribute.mdx
+++ b/docs/contribute.mdx
@@ -1,4 +1,4 @@
 ---
-title: Contribute to Rune
-sidebar_label: Rune Contribution Guide
+title: Rune Contribution Guide
+sidebar_label: Contribute to Rune
 ---
