--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -109,6 +109,6 @@ Rune & Hammerd is written in the [Rust programming language](https://rust-lang.o
 advantage of several features of the [Webassembly](https://webassembly.org/) platform to deliver its functionality.
 
 ## Next steps
-- Read about [installing Docker](/docs/get_rune).
-- Get hands-on experience with the [Getting started with Docker](index.md)
+- Read about [installing Rune and Hammerd](/docs/get_rune).
+- Get hands-on experience with the [Getting started with Run](/docs/getting_started/1)
     tutorial.
