--- a/docs/get_rune.mdx
+++ b/docs/get_rune.mdx
@@ -1,4 +1,17 @@
 ---
 title: Installation Guide
-sidebar_label: Get Rune
+sidebar_label: Installing Tinyverse Tools
 ---
+
+# Installing Rune
+
+## Linux
+
+## MacOSX
+
+
+### Apple M1 
+
+
+## Windows
+
