Adding section help

--- a/docs/get_help.mdx
+++ b/docs/get_help.mdx
@@ -1,4 +1,8 @@
 ---
-title: Rune
-sidebar_label: Contribute to Rune
+title: How to get help?
+sidebar_label: Getting Help
 ---
+
+# Discord
+
+# Discourse
