--- a/docs/reference/rune_cli.mdx
+++ b/docs/reference/rune_cli.mdx
@@ -1,7 +1,7 @@
 ---
 title: Rune Tools Reference
 sidebar_label: Rune Tools
-slug: /reference/runefile_yml
+slug: /reference/runecli
 ---
 
 
@@ -15,5 +15,7 @@ slug: /reference/runefile_yml
 
 * Capability
 
+
+# Rune Serve
 
 
