Adding more docs

--- a/docs/get_rune.mdx
+++ b/docs/get_rune.mdx
@@ -3,15 +3,17 @@ title: Installation Guide
 sidebar_label: Installing Tinyverse Tools
 ---
 
-# Installing Rune
+Rune and the dependant toolchains used to generate bytecode require some dependencies. To make it 
+easier to use you can leverage docker! Our images are available on [docker hub](https://hub.docker.com/repository/docker/tinyverseml).
 
-## Linux
-
-## MacOSX
-
-
-### Apple M1 
+## Docker (Recommended)
 
 
-## Windows
+Currently Docker on M1 is still unstable 
+
+** Note about Apple M1 **
+
+** Note about Windows **
+
+## 
 
