--- a/docs/get_help.mdx
+++ b/docs/get_help.mdx
@@ -3,6 +3,8 @@ title: How to get help?
 sidebar_label: Get Help
 ---
 
-# Discord
+We are happy to help on:
 
-# Discourse
+* Chat with us on [Discord](https://discord.gg/U3QwAvfK)
+* Join us on [Discourse](https://tinyverse.discourse.group)
+* Discuss Issues with us on [Github](https://github.com/hotg-ai)
