--- a/docs/get_rune.mdx
+++ b/docs/get_rune.mdx
@@ -8,12 +8,21 @@ easier to use you can leverage docker! Our images are available on [docker hub](
 
 ## Docker (Recommended)
 
+You can use `docker run` to use `rune-cli` directly in your local directory. The following shell script will execute `rune-cli` using volumes in your local directory.
+```
+#! sh
+docker run -v `pwd`:`pwd` -w `pwd`  -i -t tinyverseml/rune-cli /usr/local/bin/rune $@%   
+```
 
-Currently Docker on M1 is still unstable 
+Save the shell script in your PATH variable and you are ready to go!
+
+
+### Setting 
 
 ** Note about Apple M1 **
 
-** Note about Windows **
+Currently Docker on M1 is still unstable and is not supported! We are working on this actively follow our progress
+on (github)[https://github.com/hotg-ai/rune/issues/174].  
 
-## 
+** Note about Windows **
 
