added contribute instructions

--- a/docs/contribute.mdx
+++ b/docs/contribute.mdx
@@ -2,3 +2,11 @@
 title: Rune Contribution Guide
 sidebar_label: Contribute to Rune
 ---
+
+We have documented how you can build and contribute to Rune in the Rune's [github repo - refer here](https://github.com/hotg-ai/rune/blob/master/CONTRIBUTING.md). 
+
+We welcome everyone to play with Rune and add value as you see fit. The general directions where we would love the community to help are:
+* Making rune build natively on all platforms 
+* Creating processing blocks for various models and scenarios
+* Adding support for additional hardware and platforms
+* Building TinyML apps using rune :)
