Need more time for reference rune cli

--- a/docs/get_started.mdx
+++ b/docs/get_started.mdx
@@ -1,6 +1,7 @@
 ---
 title: Building a Rune - Quick Tutorial
 sidebar_label: Get Started
+slug: /
 ---
 
 In this tutorial we will go from 0-60 on how to build a Rune, run it, serve it, and test it on a mobile app. 
