Replaced that ugly markdown table with its more readable HTML version

--- a/docs/reference/rune_cli.mdx
+++ b/docs/reference/rune_cli.mdx
@@ -1,6 +1,6 @@
 ---
-title: Rune Tools Reference
-sidebar_label: Rune Tools
+title: Rune Command Line Reference
+sidebar_label: Rune Command Line
 slug: /reference/runecli
 ---
 
