Added android link

--- a/docs/get_started.mdx
+++ b/docs/get_started.mdx
@@ -380,8 +380,8 @@ We have built a mobile app that allows you to test your Runes instantly on the a
 
 
 First download the Runic mobile app from the app store. 
-* iOS - https://apps.apple.com/us/app/runic-by-hotg-ai/id1550831458 
-* Android (pending google approval) - coming soon!
+* [iOS](https://apps.apple.com/us/app/runic-by-hotg-ai/id1550831458)
+* [Android](https://play.google.com/store/apps/details?id=ai.hotg.runicapp&hl=en_US&gl=US)
 
 Next you need to **serve** the food.rune you just built to be deployed to the phone. In order to do that we are going to use a rune-serve docker image. 
 
