links to hiring

--- a/src/pages/careers.mdx
+++ b/src/pages/careers.mdx
@@ -17,11 +17,14 @@ As an early team team member, you will help us
 
 ## HOT-G Open Roles
 
-1. Machine Learning Operations Engineer 
-2. Sales Engineer
-3. Engineer
-4. Product & Sales
-5. Community & Engineering 
+1. [Machine Learning Operations Engineer](https://angel.co/company/hammer-of-the-gods/jobs/1490652-software-engineer)
+2. [Software Engineer](https://angel.co/company/hammer-of-the-gods/jobs/1490652-software-engineer)
+
+Don't see your perfect role? If you are a [growth engineer](https://www.atlassian.com/engineering/what-does-a-product-growth-engineer-work-on) who can hack on things, build POCs, iterate quickly with the founders, drop us a line.
+
+[//]: # "3. Sales Engineer"  
+[//]: # "4. Product & Sales"  
+[//]: # "5. Community & Engineering" 
 
 
 ## Frequently Asked Questions
@@ -36,7 +39,7 @@ Certainly! If our team determines that you’re a fit, we will reach out to you 
 
 **_How many people do HOT-G plan on hiring?_** 
 
-Currently, we have five open positions to fill. The five talented folks who will fill these positions will help us scale from hundreds to thousands of paying users as we progress to product-market-fit. We expect to grow quickly in the next two years so do keep in touch with us by following our official company’s Linkedin page and Twitter Marketing account for more career opportunities! 
+Currently, we have five open positions to fill. The five talented folks who will fill these positions will help us scale from hundreds to thousands of paying users as we progress to product-market-fit. We expect to grow quickly in the next two years so do keep in touch with us by following our official company’s [LinkedIn](https://www.linkedin.com/company/hotg-ai) page and [Twitter](https://twitter.com/hotg_ai) Marketing account for more career opportunities! 
 
 **_Where is HOT-G located?_**
 
