career desc change

--- a/src/pages/careers.mdx
+++ b/src/pages/careers.mdx
@@ -39,7 +39,7 @@ Certainly! If our team determines that you’re a fit, we will reach out to you 
 
 **_How many people do HOT-G plan on hiring?_** 
 
-Currently, we have five open positions to fill. The five talented folks who will fill these positions will help us scale from hundreds to thousands of paying users as we progress to product-market-fit. We expect to grow quickly in the next two years so do keep in touch with us by following our official company’s [LinkedIn](https://www.linkedin.com/company/hotg-ai) page and [Twitter](https://twitter.com/hotg_ai) Marketing account for more career opportunities! 
+Currently, we have two open positions to fill but are always looking for entrepreneurial engineers for various generalist roles. The talented folks who will fill these positions will help us scale from hundreds to thousands of paying users as we progress to product-market-fit. We expect to grow quickly in the next two years so do keep in touch with us by following our official company’s [LinkedIn](https://www.linkedin.com/company/hotg-ai) page and [Twitter](https://twitter.com/hotg_ai) Marketing account for more career opportunities! 
 
 **_Where is HOT-G located?_**
 
